--- a/paperkit-dashboard.html
+++ b/paperkit-dashboard.html
@@ -2,7 +2,7 @@
 @license
 -->
 <link rel="import" href="bower_components/polymer/polymer.html">
-<link rel="import" href="../../Behaviors/paperkit-dragcontainer/paperkit-dragcontainer.html">
+<link rel="import" href="bower_components/paperkit-dragcontainer/paperkit-dragcontainer.html">
 
 <!--
 Paperkit dashboard system base element.
