--- a/demo/index.html
+++ b/demo/index.html
@@ -11,30 +11,34 @@ The complete set of contributors may be found at http://paperkit.github.io/CONTR
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <title>seed-element Demo</title>
-    <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
     <script>
     window.Polymer = window.Polymer || {};
     window.Polymer.dom = 'shadow';
     </script>
-    <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
-    <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
-    <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">    
+    <link rel="import" href="../../iron-icons/iron-icons.html">
+    <link rel="import" href="../../paper-icon-button/paper-icon-button.html">
+    <link rel="import" href="../../paper-toolbar/paper-toolbar.html">    
     <link rel="import" href="../paperkit-dashboard.html">   
     <link rel="import" href="../paperkit-dashboard-item.html">   
   </head>
   <body>
-		<paperkit-dashboard rows="10" cols="3" drag-spot="dragspot">
-			<paperkit-dashboard-item class="red" left="0" top="0" width="2" height="2">
+		<paperkit-dashboard rows="2" cols="3" drag-spot="dragspot">
+			<paperkit-dashboard-item class="red" left="0" top="0" width="1" height="1" drag-spot="dragspot">
 				<paper-icon-button icon="menu" class="dragspot"></paper-icon-button>
 				<span>Item 1</span>			
 			</paperkit-dashboard-item>
-			<paperkit-dashboard-item class="blue" left="4" top="4" width="1" height="3">
+			<paperkit-dashboard-item class="blue" left="0" top="0" width="1" height="1"  drag-spot="dragspot">
 				<paper-icon-button icon="menu" class="dragspot"></paper-icon-button>
 				<span>Item 2</span>			
 			</paperkit-dashboard-item>
-			<paperkit-dashboard-item class="green" left="1" top="2" width="1" height="3">
+			<paperkit-dashboard-item class="green" left="0" top="0" width="1" height="1"  drag-spot="dragspot">
 				<paper-icon-button icon="menu" class="dragspot"></paper-icon-button>
 				<span>Item 3</span>			
+			</paperkit-dashboard-item>
+			<paperkit-dashboard-item class="green" left="0" top="0" width="1" height="1"  drag-spot="dragspot">
+				<paper-icon-button icon="menu" class="dragspot"></paper-icon-button>
+				<span>Item 4</span>			
 			</paperkit-dashboard-item>
  		</paperkit-dashboard>
  		<script>
@@ -59,6 +63,10 @@ The complete set of contributors may be found at http://paperkit.github.io/CONTR
     	
     	paperkit-dashboard-item.green {
     		border-color: green;
+    	}
+    	
+    	paperkit-dashboard-item.purple {
+    		border-color: purple;
     	}
     </style> 
  		
