Fixed bug in recalculating number of rows automatically

--- a/demo/index.html
+++ b/demo/index.html
@@ -23,7 +23,7 @@ The complete set of contributors may be found at http://paperkit.github.io/CONTR
     <link rel="import" href="../paperkit-dashboard-item.html">   
   </head>
   <body>
-		<paperkit-dashboard rows="3" cols="3" drag-spot="dragspot">
+		<paperkit-dashboard rows="3" columns="3" drag-spot="dragspot">
 			<paperkit-dashboard-item class="red" left="0" top="0" width="1" height="1" drag-spot="dragspot">
 				<paper-icon-button icon="menu" class="dragspot"></paper-icon-button>
 				<span>Item 1</span>			
