--- a/paperkit-dashboard.html
+++ b/paperkit-dashboard.html
@@ -85,7 +85,7 @@ Example:
     },
 		_resize: function() {
 		  var w = this.offsetWidth;
-		  var cw = w / this.cols;
+		  var cw = w / this.columns;
 		  if(this.offsetHeight > 0) {
 			  this.rows = Math.floor(this.offsetHeight / cw) + 1;
 			  this.refresh();		    
